<resources>
    <string name="app_name">Drunk Level</string>
    <string name="loading">Chargement...</string>
    <string name="add_conso">Ajouter une consomation</string>
    <string name="question_sex">Quel est ton sexe ?</string>
    <string name="female">♀ Féminin</string>
    <string name="male">♂ Masculin</string>
    <string name="question_weight">Quel est ton poids ?</string>
    <string name="validate">Valider</string>
    <string name="sober">Sobre</string>
    <string name="tipsy">Pompette</string>
    <string name="drunk">Bourré(e)</string>
    <string name="overdrunk">Arrête de boire</string>
    <string name="add_new_drink">Nouvelle boisson</string>
    <string name="question_volume">Quelle volume en as tu bu ?</string>
    <string name="create_drink">Ajouter une boisson</string>
    <string name="name">Nom</string>
    <string name="alcohol_degree">Degré d\'alcool</string>
    <string name="required">Champ requis</string>
    <string name="select_icon">Selectionner une icône</string>
</resources>
