<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CreateDrinkActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_drink"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/alcohol_degree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/alcohol_degree"
        android:inputType="numberDecimal" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="96sp"
        android:layout_height="96sp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/liquor_1_svg" />

    <Button
        android:id="@+id/validate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/validate" />

</LinearLayout>