<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="20sp"
    android:paddingTop="60sp"
    android:paddingRight="20sp"
    android:paddingBottom="60sp"
    tools:context=".QuerySex">

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/question_sex"
        android:textSize="32sp" />

    <Button
        android:id="@+id/female"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:background="@color/colorAccent"
        android:text="@string/female"
        android:textSize="24sp" />

    <Button
        android:id="@+id/male"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:background="@color/colorAccent"
        android:text="@string/male"
        android:textSize="24sp" />

</LinearLayout>